KangiesLab: Add screenshot quality setting [2/2]

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -308,4 +308,9 @@
     <string name="flashlight_on_call_dnd">Only in DND mode</string>
     <string name="flashlight_on_call_always">Always</string>
 
+
+    <!-- Screenshot compression  -->
+    <string name="screenshot_compression_title">Screenshot quality</string>
+    <string name="screenshot_compression_summary">Compress screenshot size with loss in image quality</string>
+
 </resources>
