--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -78,6 +78,15 @@
             settings:defaultValue="0"
             settings:units="ms" />
 
+	<com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="screenshot_compression"
+	    android:title="@string/screenshot_compression_title"
+            android:summary="@string/screenshot_compression_summary"
+	    android:defaultValue="100"
+            android:max="100"
+            settings:min="10"
+            settings:units="%" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
