--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -101,6 +101,12 @@
         android:title="@string/MiscellaneousLS_category">
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="statusbar_icons_style"
+            android:title="@string/statusbar_icons_style"
+            android:summary="@string/statusbar_icons_style_summary"
+            android:defaultValue="true" />
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="status_bar_notif_count"
         android:title="@string/status_bar_notif_count_title"
         android:summary="@string/status_bar_notif_count_summary"
