--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -138,6 +138,13 @@
 
     </PreferenceCategory>
 
+    <!-- Statusbar Ticker -->
+    <Preference
+        android:key="ticker_settings"
+        android:title="@string/ticker_screen_title"
+        android:summary="@string/ticker_screen_summary"
+        android:fragment="com.awaken.settings.Ticker" />
+
   <!-- Heads up -->
     <Preference
         android:key="heads_up_notifications"
