--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -335,4 +335,7 @@
     <string name="ticker_animation_mode_scroll">Scroll</string>
     <string name="ticker_tick_duration_title">Ticker duration</string>
 
+
+    <!-- Lockscreen blur -->
+    <string name="lockscreen_blur_title">Background blur</string>
 </resources>
