--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -172,6 +172,14 @@
         android:key="Miscellaneous"
         android:title="@string/MiscellaneousLS_category">
 
+    <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        android:key="lockscreen_blur"
+        android:title="@string/lockscreen_blur_title"
+        android:max="100"
+        settings:min="0"
+        settings:units="%"
+        settings:interval="5"
+        android:defaultValue="0" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_lockscreen"
